--- a/Lab2.html
+++ b/Lab2.html
@@ -6,16 +6,34 @@
     <link rel="stylesheet" type="">
 </head>
 <body>
-<h1>jessie lynch</h1>
-<h2>12 short street</h2>
-<h3>HASTING</h3>
-<h4>PH:0911482587</h4>
-<h5>Email:12346788@gmail.com</h5>
-<h6>Background</h6>
-<h7>i am a muture person with a wide range of word experiences who is currently
-    studing the level 4 cookery progamme at EIT Hawke's Bay. i have a creative
-    background and have embarked on study on develop my culinary abilities. I am
-    looking for partime to work to extend and develop my studies.</h7>
+<p><b>Jessie lynch</br>
+    12 Short street</br>
+    HASTING</b></p>
+<p><b>Ph:0911482587</br>Email: yuadssadasd@gmail.com</b></p>
+<p><b>Background</br></b>
+<i>i am a mature person with a wide range of work experiences who is currently studiyng the 4 level Cookery progaming at EIT Hawmke's bay. I have a creative background and have embarked on study to develop my culinary abilities. I am looking for partime work to extend and develop my studies</i></p>
+<p><b>SUMMARY OF SKILLS</b></p>
+<p> &#9679; Capable of carrying out sout chef role in a kitchen </br>
+    &#9679; Confident preparing sauces, hot & cold and emulsions </br>
+    &#9679; Good knowledge of grilling, crustaceans, poultry and range of meat </br>
+    &#9679; Pastieserie; possess good basic knowledged patries cake & bread </br>
+    &#9679; Good knowledge of commercial kitchen appliences equipment </br>
+    &#9679; Able to communicate and enrage  professionally with kitchen staff, restaurant and custumers</br>
+    &#9679; Forcused, efficient and fast in my work acctivities</br>
+    &#9679; Good understanding of heath and safety issue including hazard control
+</p>
+<p><b>EMPLOYMENT HISTORY</b></p>
+<p><b>2016 </b></p>
+   <p> <b>Splash Cafe &emsp;&emsp; HASTING</b></br>
+    <b>Role</b>:Work experirence while completing lv 3 of cookery progamme</br>
+    <b>Key learning</b>:Prepation & cooking, becoming familliar with a commercial kitchen, plating food, and baking cakes
+</p>
+<p><b>2012 - 2015 </b></br>
+<p>i was a fulltime parent and caregiver to my son who had a heart condition that required medical treatment and therefore preduced paid employment </p>
+<p><b>2010-2012</b></p>
+<p><b>Twyford school &emsp;&emsp; Hastings </br></b></p>
+<p> <b>Role:</b>Teacher aide </p>
+  <p>  <b>Key activities:</b>supported the teacher in the dilivery of curriculum to individual students who experienced learing challenges</p>
 
 </body>
 </html>
